@@ -11,6 +11,7 @@ New stuff's at the top.  This list is not necessarily complete.
  o Get Subjectwidth/left working in the collector. (Gregg)
  o Change Config->Edit and Config->Palette menus to have no default (Steven)
  o Avoid spurious error reports for R/O directories on FAT volumes.  Ticket #116. (Steven)
+ o Add immediate updates toggle to config menu.  Ticket #132. (Steven)
 
 3.09
  o Check program strings entered in assoc, commands & settings for quoting,
